# consultor-investimentos

./: .coverage  .env.example  .gitignore  README.md  RELEASE_NOTES_V1.2.md  RELEASE_NOTES_V1.4.md  alembic.ini  coverage.json  main.py  pyproject.toml
config/: carteira.json
docs/adr/: ADR-001-sqlite.md  ADR-002-streamlit.md  ADR-003-sqlalchemy-orm.md  ADR-004-alembic-migrations.md  ADR-005-offline-first-mvp.md  ADR-006-dois-tipos-de-ativo.md  ADR-007-repositorios-retornam-orm.md  ADR-008-services-como-camada-obrigatoria.md  ADR-009-decimal-para-valores-financeiros.md  ADR-010-soft-delete.md  ADR-011-snapshots-modo-b.md  ADR-012-rentabilidade-metodo-simplificado.md  ADR-013-single-user-settings.md  ADR-014-saldo-inicial.md  ADR-015-formula-projecao-valor-futuro.md  ADR-016-description-field-excluido-da-ui.md  README.md
docs/architecture/: V1_2_ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 6690aa5c7f86_initial_schema.py  a1b2c3d4e5f6_migrate_asset_class_fii_to_fii_brick.py  c1d2e3f4a5b6_add_currency_to_assets.py  d2e3f4a5b6c7_create_exchange_rates.py  e3f4a5b6c7d8_add_benchmark_history.py  f7e8d9c0b1a2_add_etf_fii_brick_fii_paper_columns.py
src/consultor/: analise.py  coleta.py  main.py  planilha.py  relatorio.py
src/consultor_investimentos/: app.py  config.py
tests/: conftest.py
tests/integration/: test_asset_reactivation.py  test_asset_repository.py  test_benchmark_flow.py  test_contribution_repository.py  test_goal_repository.py  test_holding_repository.py  test_import_consistency.py  test_market_update_flow.py  test_performance_report_flow.py  (+3 more)
(+70 files in other folders)
