[project]
name = "consultor-investimentos"
version = "0.1.0"
description = "Sistema pessoal de gestão patrimonial"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "plotly>=6.1.0",
    "python-dotenv>=1.2.2",
    "openpyxl>=3.1.5",
    "yfinance>=0.2.50",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consultor_investimentos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
